--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     env_file:
       - ./env/bot.env
-      - ./env/posgres.env
+      - ./env/postgres.env
     environment:
     - POSTGRES_HOST=db
 
@@ -14,7 +14,7 @@ services:
     image: postgres
     restart: always
     env_file:
-      - ./env/posgres.env
+      - ./env/postgres.env
 
   adminer:
     profiles:
